--- a/worldWise/src/pages/AppLayout.module.css
+++ b/worldWise/src/pages/AppLayout.module.css
@@ -1,3 +1,7 @@
-.nav {
-  background-color: rebeccapurple;
+.app {
+  height: 100vh;
+  padding: 2.4rem;
+  overscroll-behavior-y: none;
+  display: flex;
+  position: relative;
 }
