--- a/worldWise/src/components/CityItem.module.css
+++ b/worldWise/src/components/CityItem.module.css
@@ -2,12 +2,13 @@
 .cityItem:link,
 .cityItem:visited {
   display: flex;
-  gap: 1.6rem;
+  gap: 2rem;
   align-items: center;
 
   background-color: var(--color-dark--2);
   border-radius: 7px;
   padding: 1rem 2rem;
+  margin: 1rem 0;
   border-left: 5px solid var(--color-brand--2);
   cursor: pointer;
 
@@ -21,7 +22,7 @@
 }
 
 .emoji {
-  font-size: 2.6rem;
+  font-size: 2rem;
   line-height: 1;
 }
 
