--- a/worldWise/src/components/CountryList.module.css
+++ b/worldWise/src/components/CountryList.module.css
@@ -2,8 +2,7 @@
   width: 100%;
   height: 65vh;
   list-style: none;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: auto;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
