--- a/worldWise/src/components/Form.module.css
+++ b/worldWise/src/components/Form.module.css
@@ -22,6 +22,8 @@
 
 .flag {
   position: absolute;
+  background-color: black;
+  padding: 0 6px;
   right: 1rem;
   top: 2.7rem;
   font-size: 2.8rem;
