--- a/fast-react-pizza/src/index.css
+++ b/fast-react-pizza/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .input {
-    @apply w-full rounded-xl border border-stone-200 px-4 py-2 text-sm transition-all duration-200 placeholder:text-stone-400 focus:opacity-50 focus:outline-none focus:ring focus:ring-yellow-400 md:px-6 md:py-3;
+    @apply rounded-xl border border-stone-200 px-4 py-2 text-sm transition-all duration-200 placeholder:text-stone-400 focus:opacity-50 focus:outline-none focus:ring focus:ring-yellow-400 md:px-6 md:py-3;
   }
 
   /* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
